# object_pool

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  _config.yml  index.md  main.cpp  object_pool.hpp  run_build.sh
_data/: navigation.yml
_includes/: navigation.html
_layouts/: default.html  home.html
_pages/class/: acquired_object.md  classes.md  object_pool.md
_pages/classes/: object_pool.md
_pages/header/: object_pool_hpp.md
_sass/: jekyll-theme-minimal.scss
_site/: 404.html  LICENSE  about.html  feed.xml  main.cpp
_site/_pages/: about.html
_site/_pages/classes/: acquired_object.html  acquired_object.md
_site/classes/object_pool/: index.html
_site/concept/lockable/: index.html
_site/header/object_pool/: index.html
_site/index/: index.html
cmake/modules/: CodeCoverage.cmake
doc/: OBJECT_POOL.md
docs/: OBJECT_POOL.md  README.md  _config.yml
docs/_layouts/: blank.html
docs/_pages/concept/: lockable.md
docs/_posts/: 2018-01-03-welcome-to-jekyll.markdown
examples/: object_pool.hpp  predeclare_object.cpp  worker_example1.cpp
src/: object_pool.hpp
test/: CMakeLists.txt
test/tests/: resize.cpp
test/tests/modifiers/: resize.cpp
tests/: CMakeLists.txt  tests-main.cpp
tests/capacity/: empty.cpp  size.cpp
tests/modifiers/: emplace.cpp  push.cpp
tests/object_pool/capacity/: capacity.cpp
tests/object_pool/element_access/: acquire.cpp  acquire_wait.cpp  allocate.cpp
tests/object_pool/modifiers/: push.cpp  reserve.cpp  resize.cpp
tests/object_pool/observers/: operator_bool.cpp
tests/observers/: in_use.cpp
